JS: Converted ColladaModel's ColladaFile input to FileInput
This also involved caching MeshProtoKeys by URI instead of string

Signed-off-by: Matt Chudleigh <matt.chudleigh@ausenco.com>
Signed-off-by: Harvey Harrison <harvey.harrison@ausenco.com>